v3.6.1.2
- Fix: 

v3.6.1.1
- Fixed: Content/Sidebar Mobile Responsive classes
- Fixed: Entry/Meta::get_options() for archives
- Changed: 'archive-wrappers' to 'archive-intro-wrappers' context for Archive Intro Wrappers
- Updated: WeCodeArt/Autoloader() can now be instantiated with custom namespace and root directory for child themes autoloading

v3.6.1
- Fixed: 'has-sidebar' body class for each context (blog/page/cpt archive or singular) and sanitize class array before return;
- Fixed: Customizer Preview JS
- Fixed: Entry Meta modules defaults to empty to reflect the case if all customizer entry meta modules are disabled
- Fixed: Markup::wrap() function dynamic context key for self::generate_attr()
- Changed: Moved 'wecodeart' function to functions.php and removed wecodeart.php file
- Added: Gutenberg / wecodeart_gutenberg_is_wide_or_full() to check for wide/full CPTs
- Added: Gutenberg / wecodeart_gutenberg_wide_or_full_content() if sidebar should be disabled on singular CPTs
- Added: Gutenberg / Filter: `wecodeart/filter/gutenberg/wide_or_full_content` with `true' by default
- Added: Gutenberg / .gutenberg-full-wide body class on Gutenberg posts with full or wide blocks
- Updated: Read More button on archives, added screen reader text and arria hidden for double arrow symbol
- Updated: sanitize_html_class for numberic pagination classes / removed empty space from classnames string
- Updated: Bootstrap Latest v4.3

v3.6.0.6
- Added: Filter `wecodeart/filter/entry/prev_next_nav/enabled` and CPT support for Single CPT prev/next navigation
- Added: Filter function to disable Prev/Next navigation on pages
- Change: Output the_widget( 'WC_Widget_Cart', 'title=' ) for WOO Header Bar Module instead of plain HTML container

v3.6.0.5
- Fix: Customizer PHP silent warning.

v3.6.0.4
- Fix: Author Box posts URL
- Fix: Entry Meta - Author url on frontend and placeholder text for ajax refresh on WP customizer
- Change: CSS was split into multiple smaller files