@@ -11,7 +11,7 @@ if ( ! defined( 'ABSPATH' ) ) exit();
  * @subpackage 	WeCodeArt\Core\Callbacks
  * @copyright   Copyright (c) 2019, WeCodeArt Framework
  * @since 		v3.5
- * @version		v3.5
+ * @version		v3.6.1.2
  */
 
 class Callbacks {
@@ -35,10 +35,21 @@ class Callbacks {
 
 	/**
 	 * Checks if the current page is a product archive
-	 * @since	v1.8.8
-	 * @version	v3.5
+	 * @since	1.8.8
+	 * @version	3.5
+	 * @return 	boolean
 	 */
 	public static function _is_frontpage() {
-		return( is_front_page() && ! is_home() );
+		return ( is_front_page() && ! is_home() );
+	}
+
+	/**
+	 * Check if on default post archive
+	 * @since	3.6.1.2
+	 * @return 	boolean
+	 */
+	public static function _is_post_archive() { 
+		return ( 'post' === get_post_type() && ( is_home() || is_archive() || is_search() ) );
+		return false;
 	}
 }
